--- a/src/app/question/question.component.html
+++ b/src/app/question/question.component.html
@@ -5,4 +5,5 @@
           *ngFor="let answer of question.all_answers"
           [innerHTML]="answer">
   </button>
+  <button class="inverse small" *ngIf="canChangeQuestion" (click)="changeQuestion.emit()">Change question</button>
 </div>
