--- a/src/app/quiz/quiz.component.html
+++ b/src/app/quiz/quiz.component.html
@@ -1,5 +1,9 @@
-<app-question *ngFor="let q of questions; index as i" [question]="q"
-              (change)="userAnswers[i] = $event">
+<app-question
+  *ngFor="let q of questions; index as i"
+  [question]="q"
+  (change)="userAnswers[i] = $event"
+  [canChangeQuestion]="!!changeQuestion"
+  (changeQuestion)="changeQuestion?.(i)">
 </app-question>
 <div>
   <button class="inverse large" *ngIf="userAnswers.length == 5" (click)="submit()">
